auto-test/tests/chapter_18/invalid_types/extra_credit/scalar_required/compare_unions.c


union u { long l; };

int main(void){
    union u x = {1};
    x == x; 
    return 0;
}